--- a/CalculationWithMultiThreads/MainWindow.xaml
+++ b/CalculationWithMultiThreads/MainWindow.xaml
@@ -8,7 +8,8 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <StackPanel x:Name="spBars">
-            <Button x:Name="btnStartCalcArraySegment" Width="120" Height="30" Content="Start Segment Calc" Click="StartCalcArraySegment_Click"/>
+            <Button x:Name="btnStartCalcSingleThread" Width="120" Height="30" Content="Start 1 Thread" Click="StartCalcSingleThread_Click"/>
+            <Button x:Name="btnStartCalcMultiThread" Width="120" Height="30" Content="Start x Threads" Click="StartCalcMultiThread_Click"/>
             <Button x:Name="btnStopCalc" Width="120" Height="30" Content="Stop" Click="StopCalc_Click"/>
             <ProgressBar x:Name="pbBar" Width="300" Height="30" Maximum="1000"/>
             <TextBox x:Name="tbOut" Width="300" Text=""/>
