--- a/CalculationWithMultiThreads/MainWindow.xaml
+++ b/CalculationWithMultiThreads/MainWindow.xaml
@@ -6,6 +6,14 @@
         xmlns:local="clr-namespace:CalculationWithMultiThreads"
         mc:Ignorable="d"
         Title="MultiThreading by TobiH" Height="650" Width="800">
+    <Window.Resources>
+        <Style x:Key="ProgressBarStyle" TargetType="ProgressBar">
+            <Setter Property="Width" Value="300" />
+            <Setter Property="Height" Value="30" />
+            <Setter Property="Maximum" Value="1000" />
+            <Setter Property="Margin" Value="2" />
+        </Style>
+    </Window.Resources>
     <Grid>
         <StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
